@@ -1,327 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.codehaus</groupId>
-        <artifactId>codehaus-parent</artifactId>
-        <version>4</version>
-    </parent>
-
+  <parent>
     <groupId>org.milyn</groupId>
-    <artifactId>milyn</artifactId>
-    <packaging>pom</packaging>
-    <version>1.6-SNAPSHOT</version> <!-- base pom version - do not remove this comment -->
-    <name>Milyn (Base POM)</name>
-    <url>http://milyn.codehaus.org</url>
+    <artifactId>smooks-parent</artifactId>
+    <version>1.7.1</version>
+    <relativePath>smooks-parent/pom.xml</relativePath>
+  </parent>
 
-    <properties>
-        <camel.version>2.6.0</camel.version>
-        <spring.version>3.0.5.RELEASE</spring.version>
-        <xerces.version>2.9.1</xerces.version>
-        <xalan.version>2.7.1</xalan.version>
-        <xml_apis.version>1.3.02</xml_apis.version>
-        <xstream.version>1.4.1</xstream.version>
-        <commons_lang.version>2.4</commons_lang.version>
-        <nekohtml.version>0.9.5</nekohtml.version>
-        <dtdparser.version>1.21</dtdparser.version>
-        <freemarker.version>2.3.15</freemarker.version>
-        <opencsv.version>2.3</opencsv.version>
-        <ant.version>1.7.0</ant.version>
-        <javassist.version>3.10.0.GA</javassist.version>
-        <mvel.version>2.0.17</mvel.version>
-        <groovy.version>1.5.7</groovy.version>
-        <jaxen.version>1.1.1</jaxen.version>
-        <javax.transaction.version>1.1</javax.transaction.version>
-        <mockejb.version>0.6-beta2</mockejb.version>
-        <mockito.version>1.8.0</mockito.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+  <artifactId>milyn-aggregator</artifactId>
+  <packaging>pom</packaging>
+  <name>Milyn :: Main Aggregator</name>
 
-    <modules>
-        <module>testres</module>
-        <module>commons</module>
-        <module>smooks-core</module>
-        <module>scribe</module>
-        <module>edi</module>
-        <!-- Default build only installs the POM... -->
-        <module>edi/edisax</module>
-        <!-- Purposely building ECT and EJC after Smooks components... -->
-        <module>smooks-cartridges</module>
-        <module>smooks-all</module>
+  <description>
+    Aggregates and builds all project modules. Maintains SCM information.
+  </description>
 
-        <module>edi/ect</module>
-        <module>edi/ect/maven-ect-plugin</module>
-        <module>edi/ejc</module>
-        <module>edi/ejc/maven-ejc-plugin</module>
-        <module>edi/edi-test</module>
-        <!-- module>edi/edi-utils</module -->
+  <build>
+    <pluginManagement>
+      <plugins>
+        <!--
+          Enabled updating version number in all POM files in one go. To update
+          POM version numbers, use the following command:
 
-        <module>smooks-examples</module>
-    </modules>
+          mvn versions:set -DnewVersion=[new version number]
+        -->
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>versions-maven-plugin</artifactId>
+          <version>2.4</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 
-    <dependencies>
-
-        <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>${commons_lang.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-            <version>1.1</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>logkit</groupId>
-                    <artifactId>logkit</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>avalon-framework</groupId>
-                    <artifactId>avalon-framework</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>javax.servlet</groupId>
-                    <artifactId>servlet-api</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-    </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                    <descriptor>assemblies.xml</descriptor>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.9</version>
-                <configuration>
-                    <environmentVariables>
-                        <org.milyn.xml.XsdValidator.SchemaFactory>org.apache.xerces.jaxp.validation.XMLSchemaFactory</org.milyn.xml.XsdValidator.SchemaFactory>
-                    </environmentVariables>
-                    <excludes>
-                        <exclude>**/Test*.java</exclude>
-                    </excludes>
-                    <argLine>-Xms128m -Xmx256m -XX:MaxPermSize=128m</argLine>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>2.1.2</version>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-        <resources>
-            <resource>
-                <directory>src/main/java</directory>
-                <excludes>
-                    <exclude>**/*.java</exclude>
-                    <exclude>**/*.svn</exclude>
-                </excludes>
-            </resource>
-            <resource>
-                <directory>src/main/resources</directory>
-                <excludes>
-                    <exclude>**/*.svn</exclude>
-                </excludes>
-            </resource>
-        </resources>
-        <testResources>
-            <testResource>
-                <directory>src/test/java</directory>
-                <excludes>
-                    <exclude>**/*.java</exclude>
-                    <exclude>**/*.svn</exclude>
-                </excludes>
-            </testResource>
-            <testResource>
-                <directory>src/test/resources</directory>
-                <excludes>
-                    <exclude>**/*.svn</exclude>
-                </excludes>
-            </testResource>
-        </testResources>
-    </build>
-
-    <profiles>
-        <profile>
-            <id>deploy</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>2.7</version>
-                        <executions>
-                            <execution>
-                                <id>attach-javadoc</id>
-                                <goals>
-                                    <goal>jar</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>sign</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.7</version>
-                <configuration>
-                    <overview>${basedir}/src/main/java/overview.html</overview>
-                    <links>
-                        <link>http://java.sun.com/j2se/1.5.0/docs/api</link>
-                        <link>http://www.milyn.org/javadoc/v${project.version}/commons</link>
-                        <link>http://www.milyn.org/javadoc/v${project.version}/tinak</link>
-                        <link>http://www.milyn.org/javadoc/v${project.version}/smooks</link>
-                        <link>http://www.milyn.org/javadoc/v${project.version}/edisax</link>
-                        <link>http://www.w3.org/Style/CSS/SAC/doc/</link>
-                    </links>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-pmd-plugin</artifactId>
-                <version>2.5</version>
-                <configuration>
-                    <linkXref>true</linkXref>
-                    <sourceEncoding>utf-8</sourceEncoding>
-                    <format>html</format>
-                    <targetJdk>1.5</targetJdk>
-                </configuration>
-            </plugin>
-        </plugins>
-
-    </reporting>
-
-    <scm>
-        <connection>scm:git:git@github.com:smooks/smooks.git</connection>
-        <developerConnection>scm:git:git@github.com:smooks/smooks.git</developerConnection>
-        <url>git@github.com:smooks/smooks.git</url>
-    </scm>
-
-    <repositories>
-        <repository>
-            <id>jfrog</id>
-            <url>http://www.jfrog.org/artifactory/plugins-releases</url>
-        </repository>
-        <repository>
-            <id>jboss-public-repository-group</id>
-            <name>JBoss Public Maven Repository Group</name>
-            <url>https://repository.jboss.org/nexus/content/groups/public/</url>
-            <layout>default</layout>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>never</updatePolicy>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>never</updatePolicy>
-            </snapshots>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>codehaus</id>
-            <url>http://repository.codehaus.org</url>
-        </pluginRepository>
-    </pluginRepositories>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>xerces</groupId>
-                <artifactId>xercesImpl</artifactId>
-                <version>${xerces.version}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.9</version>
-            </dependency>
-            <dependency>
-                <groupId>jaxen</groupId>
-                <artifactId>jaxen</artifactId>
-                <version>${jaxen.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <artifactId>dom4j</artifactId>
-                        <groupId>dom4j</groupId>
-                    </exclusion>
-                    <exclusion>
-                        <artifactId>jdom</artifactId>
-                        <groupId>jdom</groupId>
-                    </exclusion>
-                    <exclusion>
-                        <artifactId>xml-apis</artifactId>
-                        <groupId>xml-apis</groupId>
-                    </exclusion>
-                    <exclusion>
-                        <artifactId>xerces</artifactId>
-                        <groupId>xmlParserAPIs</groupId>
-                    </exclusion>
-                    <exclusion>
-                        <artifactId>xerces</artifactId>
-                        <groupId>xercesImpl</groupId>
-                    </exclusion>
-                    <exclusion>
-                        <artifactId>xom</artifactId>
-                        <groupId>xom</groupId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+  <modules>
+    <module>smooks-parent</module>
+    <module>testres</module>
+    <module>commons</module>
+    <module>smooks-core</module>
+    <module>scribe</module>
+    <module>edi</module>
+    <module>smooks-cartridges</module>
+    <module>smooks-all</module>
+    <module>smooks-examples</module>
+  </modules>
 </project>
